Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-13364

lnetctl: unexpected output for lnetctl import --show

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Minor Minor
    • Lustre 2.16.0
    • None
    • 3
    • 9223372036854775807

      nid entries at the end of the net show is extraneous. They shouldn't be there.

      [root@lustre02 ~]# lnetctl import --show < net984481795.yaml
      net:
          - net type: lo
            local NI(s):
              - nid: 0@lo
                status: up
          - net type: tcp
            local NI(s):
              - nid: 192.168.122.103@tcp
                status: up
                interfaces:
                    0: eth0
              - nid: 192.168.122.104@tcp
                status: up
                interfaces:
                    0: eth1
              - nid: 192.168.122.105@tcp
                status: up
                interfaces:
                    0: eth2
          - net type: tcp2
            local NI(s):
              - nid: 192.168.122.103@tcp2
                status: up
                interfaces:
                    0: eth0
          - net type: tcp3
            local NI(s):
              - nid: 192.168.122.103@tcp3
                status: up
                interfaces:
                    0: eth0
          - net type: tcp4
            local NI(s):
              - nid: 192.168.122.103@tcp4
                status: up
                interfaces:
                    0: eth0
          - nid: 0@lo
            status: up
          - nid: 0@lo
            status: up
      

            cbordage Cyril Bordage
            ashehata Amir Shehata (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved: