LU-13364 utils: fix bad output for lnetctl import --show

Read the right node from the yaml input ("net type" instead of "net")
to compare to what we find from ioctl when we filter results.

Signed-off-by: Cyril Bordage <cbordage@whamcloud.com>
Change-Id: I9fbbac882f26fd93299f37cca00fcbd4cb7e95d2
Reviewed-on: https://review.whamcloud.com/c/fs/lustre-release/+/43922
Tested-by: jenkins <devops@whamcloud.com>
Tested-by: Maloo <maloo@whamcloud.com>
Reviewed-by: Frank Sehr <fsehr@whamcloud.com>
Reviewed-by: Serguei Smirnov <ssmirnov@whamcloud.com>
Reviewed-by: Oleg Drokin <green@whamcloud.com>